fixed the scroll up button layout issue

--- a/src/main/www/src/less/App.less
+++ b/src/main/www/src/less/App.less
@@ -289,6 +289,8 @@ html {
 
 .scrollup {
   cursor: pointer;
+  bottom: 100px;
+  right: 16px;
 }
 
 // ********** Portal ********** //
